update 1_Train.ipynb and 1_random_forest_output.csv

--- a/1_Train.ipynb
+++ b/1_Train.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "((13608, 167), (3402, 167), (13608, 1), (3402, 1))"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,17 +329,22 @@
     "\n",
     "    # Iterate over *all* combinations\n",
     "    for index, (pipeline, parameters, tag) in enumerate(combinations.combinations):\n",
-    "        print(\"Combination {}/{}. Steps: {}\".format(index + 1, len(combinations.combinations), tag))\n",
+    "        print(\n",
+    "            \"Combination {}/{}. Steps: {}\\n\\tParams:{}\".format(\n",
+    "                index + 1, len(combinations.combinations), tag, parameters\n",
+    "            )\n",
+    "        )\n",
     "\n",
     "        if save_results:\n",
     "            file_name = \"outputs/\" + \"1_\" + estimator_tag + \"_output.csv\"\n",
     "            if os.path.isfile(file_name):\n",
-    "                outputs = pd.read_csv(file_name).loc[:, parameters.keys()]\n",
-    "                #TODO\n",
-    "                if pd.DataFrame(parameters).isin(outputs).all().any():\n",
-    "                    # if (outputs == parameters).all(1).any():\n",
-    "                    print(\"\\tAlready done. Skipped.\")\n",
-    "                    continue\n",
+    "                outputs = pd.read_csv(file_name)\n",
+    "                # if all parameters are present in the output:\n",
+    "                if all(x in outputs.columns for x in parameters.keys()):\n",
+    "                    outputs = outputs.loc[:, parameters.keys()]\n",
+    "                    if outputs.isin(parameters).any(axis=1).any(): # TODO: IL PROBLEMA è CHE OGNI ELEMENTO DEL DIZIONARIO è UNA LISTA, MENTRE NEL DF OVVIAMENTE NO. MA PERCHè FA SEMPRE MATCH???\n",
+    "                        print(\"\\tAlready done. Skipped.\")\n",
+    "                        continue\n",
     "\n",
     "        gs = GridSearchCV(\n",
     "            estimator=pipeline,\n",
@@ -370,25 +375,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combination 1/6. Steps: minmax + pca + random_forest\n",
-      "\tAlready done. Skipped.\n",
-      "Combination 2/6. Steps: minmax + pca + random_forest\n",
-      "\tAlready done. Skipped.\n",
-      "Combination 3/6. Steps: minmax + pca + random_forest\n",
-      "\tAlready done. Skipped.\n",
-      "Combination 4/6. Steps: features_remover + minmax + pca + random_forest\n",
-      "\tAlready done. Skipped.\n",
-      "Combination 5/6. Steps: features_remover + minmax + pca + random_forest\n",
-      "\tAlready done. Skipped.\n",
-      "Combination 6/6. Steps: features_remover + minmax + pca + random_forest\n",
-      "\tAlready done. Skipped.\n"
+      "Combination 1/4. Steps: minmax + pca + random_forest\n",
+      "\tParams:{'pca__n_components': [0.95], 'random_forest__max_samples': [0.66], 'random_forest__criterion': ['squared_error'], 'random_forest__n_estimators': [200], 'random_forest__max_depth': [25], 'random_forest__max_leaf_nodes': [None], 'random_forest__ccp_alpha': [0.01], 'random_forest__max_features': [0.4]}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "argument of type 'float' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[58], line 20\u001b[0m\n\u001b[1;32m      2\u001b[0m random_forest_step \u001b[38;5;241m=\u001b[39m Step(\n\u001b[1;32m      3\u001b[0m     estimator_tag,\n\u001b[1;32m      4\u001b[0m     RandomForestRegressor(n_jobs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, random_state\u001b[38;5;241m=\u001b[39mRANDOM_STATE),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m     },\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     16\u001b[0m combinations \u001b[38;5;241m=\u001b[39m MultiplePipes(\n\u001b[1;32m     17\u001b[0m     Pipe(minmax_step, pca_step, random_forest_step),\n\u001b[1;32m     18\u001b[0m     Pipe(features_remover_step, minmax_step, pca_step, random_forest_step),\n\u001b[1;32m     19\u001b[0m )\n\u001b[0;32m---> 20\u001b[0m \u001b[43mgrid_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcombinations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mestimator_tag\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mestimator_tag\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[57], line 19\u001b[0m, in \u001b[0;36mgrid_search\u001b[0;34m(combinations, estimator_tag, save_results)\u001b[0m\n\u001b[1;32m     17\u001b[0m outputs \u001b[38;5;241m=\u001b[39m outputs\u001b[38;5;241m.\u001b[39mloc[:, parameters\u001b[38;5;241m.\u001b[39mkeys()]\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m indice, riga \u001b[38;5;129;01min\u001b[39;00m outputs\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[0;32m---> 19\u001b[0m     riga_corrisponde \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mall\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalore\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mriga\u001b[49m\u001b[43m[\u001b[49m\u001b[43mchiave\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mchiave\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalore\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m riga_corrisponde:\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mAlready done. Skipped.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[57], line 19\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     17\u001b[0m outputs \u001b[38;5;241m=\u001b[39m outputs\u001b[38;5;241m.\u001b[39mloc[:, parameters\u001b[38;5;241m.\u001b[39mkeys()]\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m indice, riga \u001b[38;5;129;01min\u001b[39;00m outputs\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[0;32m---> 19\u001b[0m     riga_corrisponde \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mall\u001b[39m(\u001b[43mvalore\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mriga\u001b[49m\u001b[43m[\u001b[49m\u001b[43mchiave\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m chiave, valore \u001b[38;5;129;01min\u001b[39;00m parameters\u001b[38;5;241m.\u001b[39mitems())\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m riga_corrisponde:\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mAlready done. Skipped.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: argument of type 'float' is not iterable"
      ]
     }
    ],
@@ -398,7 +406,7 @@
     "    estimator_tag,\n",
     "    RandomForestRegressor(n_jobs=-1, random_state=RANDOM_STATE),\n",
     "    {\n",
-    "        \"max_samples\": [0.66, 0.33, 0.2],\n",
+    "        \"max_samples\": [0.66, 0.33],\n",
     "        \"criterion\": [\"squared_error\"],\n",
     "        \"n_estimators\": [200],\n",
     "        \"max_depth\": [25],  # , 5, 10, 15, 20],\n",
