--- a/0_Data_Exploration.ipynb
+++ b/0_Data_Exploration.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "---\n",
     "- Each row describes a superconductor\n",
-    "- The Properties features are groupable by:\n",
+    "- The Properties features are 8 basic chemical properties (absolute value, average, weighted average, and so on):\n",
     "    - atomic mass\n",
     "    - ionization energy\n",
     "    - atomic radius\n",
