--- a/1_Training.ipynb
+++ b/1_Training.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Critical Temperature of Superconductors\n",
+    "# Training\n",
     "\n",
     "- In order to compare in detail the results of different hyperparameters configurations, it is developed a system based on GridSearchcv[*](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html) and Pipeline[*](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html) that execute a single configuration at each execution, and save it into a csv file. A different csv file is generated for each model.\n",
     "    - Another advantage of this system is that the program execution can be stopped at any time without losing the already trained configurations\n",
