--- a/2_Explainability.ipynb
+++ b/2_Explainability.ipynb
@@ -5,9 +5,12 @@
    "metadata": {},
    "source": [
     "# Relationship between Critical Temperature and other features\n",
-    "- It follows an evaluation of the results looking for:\n",
+    "- It follows an evaluation of the best results looking for:\n",
     "    - the *coefficients* of the Linear Regression model\n",
-    "    - https://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_importances.html"
+    "    - the *feature importance* based on *mean decrease in impurity*, in Random Forest and XGBoost models\n",
+    "    - the *feature importance* based on *feature permutation*, in Random Forest and XGBoost models\n",
+    "    https://scikit-learn.org/stable/modules/permutation_importance.html#permutation-importance\n",
+    "    https://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_importances.html"
    ]
   },
   {
