--- a/0_Data_Exploration.ipynb
+++ b/0_Data_Exploration.ipynb
@@ -60,13 +60,13 @@
     "\n",
     "### Target feature\n",
     "- The target is the critical temperature of the superconductor (last column)\n",
-    "- The distribution is not uniform and has its peak near the value of 0 (see plot below)\n",
+    "- The values distribution is not uniform and has its peak near the value of 0 (see plot below)\n",
     "\n",
     "### Other Features\n",
     "- All features are numerical, except the formula (\"*material*\") written in plain text, which will be removed because useless\n",
     "- No null values\n",
     "- No strictly-duplicated rows are present. Some lines are the same except for the formula. Since the documentation says that each row is a single superconductor, no duplicated rows are removed\n",
-    "- Are present many highly correlated features among the Properties dataset. There will be tests with and without these features (see correlation matrix below)\n",
+    "- There are present many highly correlated features among the Properties dataset. There will be tests with and without these features (see correlation matrix below)\n",
     "    - Mainly the high correlation is between the different metrics of the same property, e.g. 'mean_\\*' and 'wtd_mean_\\*', or 'entropy_\\*' and 'wtd_entropy_\\*\n",
     "- The feature values belong to different ranges and they present different value distributions, thus scaling techniques will be tried (see plots matrix below)"
    ]
