--- a/2_Features_Importance.ipynb
+++ b/2_Features_Importance.ipynb
@@ -20,7 +20,7 @@
     "- It doesn't tell about the direction of the relationship between the feature and the target variable\n",
     "\n",
     "#### Feature Importance based on Feature Permutation\n",
-    "- In tree-based models, it works by randomly shuffling one feature in the test data (thus preserving the distribution of the feature) and determining how much the performance of the model decreases. The idea is that the importance of a feature is proportional to how much the score (accuracy, F1, R2, etc.) decreases when the feature is not available\n",
+    "- In tree-based models, it works by randomly shuffling one feature in the test data and determining how much the performance of the model decreases. The idea is that the importance of a feature is proportional to how much the score (accuracy, F1, R2, etc.) decreases when the feature is not available\n",
     "- It doesn't tell about the direction of the relationship between the feature and the target variable"
    ]
   },
@@ -179,7 +179,12 @@
     "    [\n",
     "        Combination(\n",
     "            \"minmax + linear_regression\",\n",
-    "            Pipeline([(\"minmax\", preprocessing.MinMaxScaler()), (\"linear_regression\", LinearRegression())]),\n",
+    "            Pipeline(\n",
+    "                [\n",
+    "                    (\"minmax\", preprocessing.MinMaxScaler()),\n",
+    "                    (\"linear_regression\", LinearRegression()),\n",
+    "                ]\n",
+    "            ),\n",
     "            {},\n",
     "        )\n",
     "    ],\n",
