--- a/3_Results.ipynb
+++ b/3_Results.ipynb
@@ -108,8 +108,8 @@
    "metadata": {},
    "source": [
     "#### Relevant Observations:\n",
-    "- The model alone has the best outcome, but it was needed a fine parameter tuning. The same results can be obtained with the 'classical' preprocessing.\n",
-    "- Each preprocess technique vary a lot the result, mainly depending on the XGBoost parameters\n",
+    "- The model alone has the best outcome, but it needed a fine parameter tuning. The same results can be obtained with the 'classical' preprocessing techniques\n",
+    "- Each preprocess technique varies a lot the result, mainly depending on the XGBoost parameters\n",
     "- In general, it appears that more ***subsampling*** and more ***column sampling*** gives better results\n",
     "- The default ***max_depth: 6*** is the best option\n",
     "- Varying the ***learning_rate*** between 0.15 and 0.20 gives the best results\n",
@@ -144,7 +144,7 @@
    "source": [
     "#### Relevant Observations:\n",
     "\n",
-    "- Each preprocess technique vary a lot the result, mainly depending on the KNN parameters\n",
+    "- Each preprocess technique varies a lot the result, mainly depending on the KNN parameters\n",
     "- The best configuration, with **corr_threshold: 0.95**, has only 5 features removed, remaining a total of 162 features. In fact, almost identical results are obtained without removing those features.\n",
     "- The best ***n_neighbors*** is around 6\n",
     "- The cosine and cityblocks are the best ***metrics***\n",
@@ -179,13 +179,13 @@
    "source": [
     "#### Relevant Observations:\n",
     "\n",
-    "- Plain SVR with the wrong parameters can result in R2=-22000 or worse\n",
-    "- Each preprocess technique vary a lot the result, mainly depending on the SVR parameters\n",
+    "- Plain SVR without hyperparameter tuning can result in R2=-22000 or worse\n",
+    "- Each preprocess technique varies a lot the result, mainly depending on the SVR parameters\n",
     "- The best configuration, with **corr_threshold: 0.99**, has only 5 features removed, remaining a total of 162 features. In fact, almost identical results are obtained without removing those features.\n",
     "- The real gamechanger is the StandardScaling\n",
     "- The best ***n_neighbors*** is around 6\n",
     "- The cosine and cityblocks are the best ***metrics***\n",
-    "- The distance ***weight*** is farmost the best option\n",
+    "- The distance ***weight*** is far most the best option\n",
     "\n",
     "| R^2  | Description  |\n",
     "|---|---|\n",
@@ -213,7 +213,7 @@
     "    - the *coefficients* of the Linear Regression model\n",
     "    - the *feature importance* based on *mean decrease in impurity*, of Random Forest and XGBoost models\n",
     "    - the *feature importance* based on *feature permutation*, of Random Forest and XGBoost models\n",
-    "- It's important to remember that these measures (except the LR coefficients) do not necessarily imply a causal relationship between the features and the target. They only capture the patterns learned by the model from the data.\n",
+    "- It's important to remember that these measures do not necessarily imply a causal relationship between the features and the target. They only capture the patterns learned by the model from the data\n",
     "- The most \"important\" features are both elements (features from Formula dataset) and properties (from the Properties dataset): ***Cu, Ca, Ba, O, range_ThermalConductivity, Valence, ...***\n",
     "- For the LR coefficients, are displayed also the most negative features (the full map is available in [2_Features_Importance](https://github.com/RiccardoEvangelisti/Evangelisti-Critical-temperature-of-superconductors/blob/main/2_Features_Importance.ipynb) notebook)\n",
     "\n",
