--- a/0_Data_Exploration.ipynb
+++ b/0_Data_Exploration.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "### Target feature\n",
     "- The target is the critical temperature of the superconductor (last column)\n",
-    "- The values distribution is not uniform and has its peak near the value of 0 (see plot below)\n",
+    "- The values distribution is not uniform or normal, but it has its peak near the value of 0 (see plot below)\n",
     "\n",
     "### Other Features\n",
     "- All features are numerical, except the formula (\"*material*\") written in plain text, which will be removed because useless\n",
